# Robo-Hobo-Public

./: .gitignore  README.md
ros2_ws/src/aros2duino/: package.xml  setup.py
ros2_ws/src/aros2duino/aros2duino/: serial_comm.py
ros2_ws/src/robo_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robo_bringup/launch/: robo.launch.py
ros2_ws/src/robo_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/robo_detection/robo_detection/: evidence_recog.py  facial_recog.py  flash_node.py  save_image.py  template_code.py  thermal_publisher.py
ros2_ws/src/robo_deterrent/: package.xml  setup.cfg  setup.py
ros2_ws/src/robo_deterrent/robo_deterrent/: siren.py
ros2_ws/src/robo_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/robo_navigation/robo_navigation/: arduino_comms_node.py
ros2_ws/src/robo_navigation/robo_navigation/motor/: motor.ino
ros2_ws/src/robo_navigation/robo_navigation/sonic-test/: sonic-test.ino
ros2_ws/src/robo_notification/: package.xml  setup.cfg  setup.py
ros2_ws/src/robo_notification/robo_notification/: email_notification.py  status_collector.py  web_server_com.py
scripts/: initialization_email.py  siren-flash-killer.py  thermal-pygame.py
scripts/init.d/: ros2-launch  ros2-sysinfo
