<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jirooblea@gmail.com">jiro</maintainer>
  <license>TODO: License declaration</license>

  <!-- DEPENDENCY PACKAGES -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>cv2</depend>
  <depend>opencv2</depend>
  <depend>numpy</depend>
  <depend>os</depend>
  <depend>datetime</depend>
  <depend>time</depend>
  <depend>sys</depend>
  <depend>busio</depend>
  <depend>board</depend>
  <depend>face_recognition</depend>
  <depend>adafruit_amg88xx</depend>
  <depend>RPi.GPIO</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
