<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_notification</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jirooblea@gmail.com">jiro</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>email.mime</depend>
  <depend>os</depend>
  <depend>smtplib</depend>
  <depend>datetime</depend>
  <depend>std_msgs</depend>
  <depend>psutil</depend>
  <depend>platform</depend>
  <depend>gpiozero</depend>
  <depend>pyrebase</depend>
  <depend>timeout</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
